[package]
name = "duralock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.7.14"
ic-cdk = "0.5.1"
ic-cdk-macros = "0.5.1"
oorandom = "11.1.3"
chrono = "0.4.19"
lazy_static = "1.4.0"
